new paper included for more references

--- a/References/My_Library_ATE.bib
+++ b/References/My_Library_ATE.bib
@@ -550,6 +550,26 @@ To reconstruct modern human evolutionary history and identify loci that have sha
 	file = {Full Text PDF:/home/leonardo_iasi/Zotero/storage/8C2QN3EU/Peter et al. - 2010 - Distinguishing between population bottleneck and p.pdf:application/pdf;Snapshot:/home/leonardo_iasi/Zotero/storage/A8KLGSSP/j.1365-294X.2010.04783.html:text/html}
 }
 
+
+@article{fu_early_2015,
+	title = {An early modern human from Romania with a recent Neanderthal ancestor},
+	volume = {524},
+	rights = {2015 Nature Publishing Group, a division of Macmillan Publishers Limited. All Rights Reserved.},
+	issn = {1476-4687},
+	url = {https://www.nature.com/articles/nature14558},
+	doi = {10.1038/nature14558},
+	abstract = {Analysis of {DNA} from a 37,000–42,000-year-old modern human from Romania reveals that 6–9\% of the genome is derived from Neanderthals, with the individual having a Neanderthal ancestor as recently as four to six generations back.},
+	pages = {216--219},
+	number = {7564},
+	journaltitle = {Nature},
+	shortjournal = {Nature},
+	author = {Fu, Qiaomei and Hajdinjak, Mateja and Moldovan, Oana Teodora and Constantin, Silviu and Mallick, Swapan and Skoglund, Pontus and Patterson, Nick and Rohland, Nadin and Lazaridis, Iosif and Nickel, Birgit and Viola, Bence and Prüfer, Kay and Meyer, Matthias and Kelso, Janet and Reich, David and Pääbo, Svante},
+	urldate = {2020-01-24},
+	date = {2015-08},
+	langid = {english},
+	file = {Full Text PDF:/home/leonardo_iasi/Zotero/storage/FAG38CTK/Fu et al. - 2015 - An early modern human from Romania with a recent N.pdf:application/pdf;Snapshot:/home/leonardo_iasi/Zotero/storage/JXXUH6UH/nature14558.html:text/html}
+}
+
 @article{skoglund_reconstructing_2017,
 	title = {Reconstructing {Prehistoric} {African} {Population} {Structure}},
 	volume = {171},
@@ -568,6 +588,25 @@ PaperClip},
 	keywords = {adaptation, Africa, ancient DNA, hunter-gatherers, natural selection, population genetics, population history},
 	pages = {59--71.e21},
 	file = {ScienceDirect Full Text PDF:/home/leonardo_iasi/Zotero/storage/T6TGERYA/Skoglund et al. - 2017 - Reconstructing Prehistoric African Population Stru.pdf:application/pdf;ScienceDirect Snapshot:/home/leonardo_iasi/Zotero/storage/9SRKV8TN/S0092867417310085.html:text/html}
+}
+
+
+@article{meyer_high-coverage_2012,
+	title = {A high-coverage genome sequence from an archaic Denisovan individual},
+	volume = {338},
+	issn = {1095-9203},
+	doi = {10.1126/science.1224344},
+	abstract = {We present a {DNA} library preparation method that has allowed us to reconstruct a high-coverage (30×) genome sequence of a Denisovan, an extinct relative of Neandertals. The quality of this genome allows a direct estimation of Denisovan heterozygosity indicating that genetic diversity in these archaic hominins was extremely low. It also allows tentative dating of the specimen on the basis of "missing evolution" in its genome, detailed measurements of Denisovan and Neandertal admixture into present-day human populations, and the generation of a near-complete catalog of genetic changes that swept to high frequency in modern humans since their divergence from Denisovans.},
+	pages = {222--226},
+	number = {6104},
+	journaltitle = {Science (New York, N.Y.)},
+	shortjournal = {Science},
+	author = {Meyer, Matthias and Kircher, Martin and Gansauge, Marie-Theres and Li, Heng and Racimo, Fernando and Mallick, Swapan and Schraiber, Joshua G. and Jay, Flora and Prüfer, Kay and de Filippo, Cesare and Sudmant, Peter H. and Alkan, Can and Fu, Qiaomei and Do, Ron and Rohland, Nadin and Tandon, Arti and Siebauer, Michael and Green, Richard E. and Bryc, Katarzyna and Briggs, Adrian W. and Stenzel, Udo and Dabney, Jesse and Shendure, Jay and Kitzman, Jacob and Hammer, Michael F. and Shunkov, Michael V. and Derevianko, Anatoli P. and Patterson, Nick and Andrés, Aida M. and Eichler, Evan E. and Slatkin, Montgomery and Reich, David and Kelso, Janet and Pääbo, Svante},
+	date = {2012-10-12},
+	pmid = {22936568},
+	pmcid = {PMC3617501},
+	keywords = {Alleles, Animals, Base Sequence, Fossils, Gene Flow, Gene Library, Genetic Variation, Genome, Human, Heterozygote, Humans, Molecular Sequence Data, Neanderthals, Sequence Analysis, {DNA}},
+	file = {Accepted Version:/home/leonardo_iasi/Zotero/storage/XK9P6I93/Meyer et al. - 2012 - A high-coverage genome sequence from an archaic De.pdf:application/pdf}
 }
 
 @article{ragsdale_models_2019,
@@ -782,6 +821,26 @@ PaperClip},
 	file = {Full Text PDF:/home/leonardo_iasi/Zotero/storage/GNN6PZAK/Malaspinas et al. - 2016 - A genomic history of Aboriginal Australia.pdf:application/pdf;Snapshot:/home/leonardo_iasi/Zotero/storage/6BUSHIRT/nature18299.html:text/html}
 }
 
+
+@article{sankararaman_genomic_2014,
+	title = {The genomic landscape of Neanderthal ancestry in present-day humans},
+	volume = {507},
+	rights = {2014 Nature Publishing Group, a division of Macmillan Publishers Limited. All Rights Reserved.},
+	issn = {1476-4687},
+	url = {https://www.nature.com/articles/nature12961},
+	doi = {10.1038/nature12961},
+	abstract = {In the modern human genome, elevated Neanderthal ancestry is found at genes affecting keratin filaments, suggesting that gene flow with Neanderthals helped modern humans to adapt to non-African environments; deficiencies of Neanderthal ancestry are also found, particularly on the X chromosome and in genes expressed highly in testes, suggesting that some Neanderthal mutations were not tolerated on a modern human genetic background as they reduced male fertility.},
+	pages = {354--357},
+	number = {7492},
+	journaltitle = {Nature},
+	shortjournal = {Nature},
+	author = {Sankararaman, Sriram and Mallick, Swapan and Dannemann, Michael and Prüfer, Kay and Kelso, Janet and Pääbo, Svante and Patterson, Nick and Reich, David},
+	urldate = {2020-01-24},
+	date = {2014-03},
+	langid = {english},
+	file = {Accepted Version:/home/leonardo_iasi/Zotero/storage/4S3KSJW2/Sankararaman et al. - 2014 - The genomic landscape of Neanderthal ancestry in p.pdf:application/pdf;Snapshot:/home/leonardo_iasi/Zotero/storage/NXPIFZGM/nature12961.html:text/html}
+}
+
 @article{cui_relaxed_2019,
 	title = {Relaxed {Selection} {Limits} {Lifespan} by {Increasing} {Mutation} {Load}},
 	volume = {178},
@@ -836,6 +895,62 @@ Video Abstract},
 	url = {https://journals.plos.org/plosgenetics/article?id=10.1371/journal.pgen.1000519},
 	urldate = {2019-07-30},
 	file = {Sensitive Detection of Chromosomal Segments of Distinct Ancestry in Admixed Populations:/home/leonardo_iasi/Zotero/storage/VXS35BXK/article.html:text/html}
+}
+
+
+@article{skov_detecting_2018,
+	title = {Detecting archaic introgression using an unadmixed outgroup},
+	volume = {14},
+	issn = {1553-7404},
+	url = {https://journals.plos.org/plosgenetics/article?id=10.1371/journal.pgen.1007641},
+	doi = {10.1371/journal.pgen.1007641},
+	abstract = {Human populations outside of Africa have experienced at least two bouts of introgression from archaic humans, from Neanderthals and Denisovans. In Papuans there is prior evidence of both these introgressions. Here we present a new approach to detect segments of individual genomes of archaic origin without using an archaic reference genome. The approach is based on a hidden Markov model that identifies genomic regions with a high density of single nucleotide variants ({SNVs}) not seen in unadmixed populations. We show using simulations that this provides a powerful approach to identifying segments of archaic introgression with a low rate of false detection, given data from a suitable outgroup population is available, without the archaic introgression but containing a majority of the variation that arose since initial separation from the archaic lineage. Furthermore our approach is able to infer admixture proportions and the times both of admixture and of initial divergence between the human and archaic populations. We apply the model to detect archaic introgression in 89 Papuans and show how the identified segments can be assigned to likely Neanderthal or Denisovan origin. We report more Denisovan admixture than previous studies and find a shift in size distribution of fragments of Neanderthal and Denisovan origin that is compatible with a difference in admixture time. Furthermore, we identify small amounts of Denisova ancestry in South East Asians and South Asians.},
+	pages = {e1007641},
+	number = {9},
+	journaltitle = {{PLOS} Genetics},
+	shortjournal = {{PLOS} Genetics},
+	author = {Skov, Laurits and Hui, Ruoyun and Shchur, Vladimir and Hobolth, Asger and Scally, Aylwyn and Schierup, Mikkel Heide and Durbin, Richard},
+	urldate = {2020-01-24},
+	date = {2018-09-18},
+	langid = {english},
+	keywords = {Comparative genomics, Genomics, Haplotypes, Hidden Markov models, Introgression, Neanderthals, Population density, Simulation and modeling},
+	file = {Full Text PDF:/home/leonardo_iasi/Zotero/storage/X2M5EFBY/Skov et al. - 2018 - Detecting archaic introgression using an unadmixed.pdf:application/pdf}
+}
+
+@article{stephens_mapping_1994,
+	title = {Mapping by admixture linkage disequilibrium in human populations: limits and guidelines},
+	volume = {55},
+	issn = {0002-9297},
+	shorttitle = {Mapping by admixture linkage disequilibrium in human populations},
+	abstract = {Certain human hereditary conditions, notably those with low penetrance and those which require an environmental event such as infectious disease exposure, are difficult to localize in pedigree analysis, because of uncertainty in the phenotype of an affected patient's relatives. An approach to locating these genes in human cohort studies would be to use association analysis, which depends on linkage disequilibrium of flanking polymorphic {DNA} markers. In theory, a high degree of linkage disequilibrium between genes separated by 10-20 {cM} will be generated and persist in populations that have a history of recent (3-20 generations ago) admixture between genetically differentiated racial groups, such as has occurred in African Americans and Hispanic populations. We have conducted analytic and computer simulations to quantify the effect of genetic, genomic, and population parameters that affect the amount and ascertainment of linkage disequilibrium in populations with a history of genetic admixture. Our goal is to thoroughly explore the ranges of all relevant parameters or factors (e.g., sample size and degree of genetic differentiation between populations) that may be involved in gene localization studies, in hopes of prescribing guidelines for an efficient mapping strategy. The results provide reasonable limits on sample size (200-300 patients), marker number (200-300 in 20-{cM} intervals), and allele differentiation (loci with allele frequency difference of {\textgreater} or = .3 between admixed parent populations) to produce an efficient approach ({\textgreater} 95\% ascertainment) for locating genes not easily tracked in human pedigrees.},
+	pages = {809--824},
+	number = {4},
+	journaltitle = {American Journal of Human Genetics},
+	shortjournal = {Am. J. Hum. Genet.},
+	author = {Stephens, J. C. and Briscoe, D. and O'Brien, S. J.},
+	date = {1994-10},
+	pmid = {7942858},
+	pmcid = {PMC1918304},
+	keywords = {Alleles, Animals, Cohort Studies, {DNA}, False Positive Reactions, Feasibility Studies, Gene Frequency, Genetic Diseases, Inborn, Genetic Markers, Genetic Techniques, Guidelines as Topic, Hominidae, Humans, Linkage Disequilibrium, Models, Genetic, Polymorphism, Genetic}
+}
+
+@article{falush_inference_2003,
+	title = {Inference of Population Structure Using Multilocus Genotype Data: Linked Loci and Correlated Allele Frequencies},
+	volume = {164},
+	rights = {Copyright © 2003 by the Genetics Society of America},
+	issn = {0016-6731, 1943-2631},
+	url = {https://www.genetics.org/content/164/4/1567},
+	shorttitle = {Inference of Population Structure Using Multilocus Genotype Data},
+	abstract = {We describe extensions to the method of Pritchard et al. for inferring population structure from multilocus genotype data. Most importantly, we develop methods that allow for linkage between loci. The new model accounts for the correlations between linked loci that arise in admixed populations (“admixture linkage disequilibium”). This modification has several advantages, allowing (1) detection of admixture events farther back into the past, (2) inference of the population of origin of chromosomal regions, and (3) more accurate estimates of statistical uncertainty when linked loci are used. It is also of potential use for admixture mapping. In addition, we describe a new prior model for the allele frequencies within each population, which allows identification of subtle population subdivisions that were not detectable using the existing method. We present results applying the new methods to study admixture in African-Americans, recombination in Helicobacter pylori, and drift in populations of Drosophila melanogaster. The methods are implemented in a program, structure, version 2.0, which is available at http://pritch.bsd.uchicago.edu.},
+	pages = {1567--1587},
+	number = {4},
+	journaltitle = {Genetics},
+	author = {Falush, Daniel and Stephens, Matthew and Pritchard, Jonathan K.},
+	urldate = {2020-01-24},
+	date = {2003-08-01},
+	langid = {english},
+	pmid = {12930761},
+	file = {Full Text PDF:/home/leonardo_iasi/Zotero/storage/8LKHW2FC/Falush et al. - 2003 - Inference of Population Structure Using Multilocus.pdf:application/pdf;Snapshot:/home/leonardo_iasi/Zotero/storage/PG73PNQX/1567.html:text/html}
 }
 
 @article{vernot_excavating_2016,
